@@ -26,7 +26,8 @@
         "smarty/smarty": "3.1.30",
         "rospdf/pdf-php": "^0.12.1",
         "components/jqueryui": "^1",
-        "xdan/datetimepicker": "^2"
+        "xdan/datetimepicker": "^2",
+        "datatables/datatables": "^1"
     },
     "require_dev": {
         "phpunit/phpunit": "5.1.*"
