@@ -1,0 +1,24 @@
+
+
+{
+    "sEmptyTable":      "Lentelėje nėra duomenų",
+    "sInfo":            "Rodomi įrašai nuo _START_ iki _END_ iš _TOTAL_ įrašų",
+    "sInfoEmpty":       "Rodomi įrašai nuo 0 iki 0 iš 0",
+    "sInfoFiltered":    "(atrinkta iš _MAX_ įrašų)",
+    "sInfoPostFix":     "",
+    "sInfoThousands":   " ",
+    "sLengthMenu":      "Rodyti _MENU_ įrašus",
+    "sLoadingRecords":  "Įkeliama...",
+    "sProcessing":      "Apdorojama...",
+    "sSearch":          "Ieškoti:",
+    "sThousands":       " ",
+    "sUrl":             "",
+    "sZeroRecords":     "Įrašų nerasta",
+
+    "oPaginate": {
+        "sFirst": "Pirmas",
+        "sPrevious": "Ankstesnis",
+        "sNext": "Tolimesnis",
+        "sLast": "Paskutinis"
+    }
+}
