@@ -201,43 +201,57 @@
 </TABLE>
 </FORM>
 <TABLE class="lmsbox">
+	<COLGROUP>
+		<COL style="width: 100%;">
+	</COLGROUP>
     <THEAD>
 	<TR>
-		<TD width="100%">
-		    <IMG src="img/attach.gif" alt="">
-			<B>{trans("Packages:")}</B> ({t a=10}last $a packages{/t})
+		<TD class="bold">
+			<IMG src="img/attach.gif" alt="">
+			{trans("Packages:")}
 		</TD>
 	</TR>
     </THEAD>
     <TBODY>
 	<TR>
-		<TD WIDTH="100%">
-			<TABLE cellpadding="5" cellspacing="0" WIDTH="100%">
+		<TD>
+			<TABLE class="datatables" data-order='[[ 0, "desc" ]]' data-page-length="25" style="display: none;">
+				<COLGROUP>
+					<COL style="width: 1%;">
+					<COL style="width: 96%;">
+					<COL style="width: 1%;">
+					<COL style="width: 1%;">
+					<COL style="width: 1%;">
+				</COLGROUP>
+				<THEAD>
 				<TR>
-					<TD WIDTH="1%" NOWRAP><B>{trans("Date:")}</B></TD>
-					<TD WIDTH="96%" NOWRAP>{trans("Filename:")}</TD>
-					<TD WIDTH="1%" NOWRAP>{trans("User:")}</TD>
-					<TD WIDTH="1%" NOWRAP ALIGN="RIGHT">{trans("Records:")}</TD>
-					<TD WIDTH="1%">&nbsp;</TD>
+					<TH class="bold nobr">{trans("Date:")}</TD>
+					<TH class="text-left nobr">{trans("Filename:")}</TD>
+					<TH class="text-center nobr" data-searchable="false">{trans("User:")}</TD>
+					<TH class="text-center nobr" data-searchable="false">{trans("Records:")}</TD>
+					<TH data-orderable="false" data-searchable="false">&nbsp;</TD>
 				</TR>
+				</THEAD>
+				<TBODY>
 				{cycle name=files values="light,lucid" print=false}
 				{foreach from=$sourcefiles item=item}
 				<TR class="{cycle name=files}">
-					<TD NOWRAP><B>{$item.idate|date_format:"%Y/%m/%d %H:%M"}</B></TD>
-					<TD NOWRAP><a href="?m=balancelist&sourcefileid={$item.id}">{$item.name}</a></TD>
-					<TD NOWRAP>{$item.username}</TD>
-					<TD align="right">{$item.count|default:0}</TD>
-					<TD>
-					    <A onclick="return confirmLink(this, '{trans("Are you sure, you want to delete this package and related operations?")}')" href="?m=cashpackagedel&id={$item.id}"><IMG src="img/delete.gif" alt="[ {trans("Delete")} ]" title="[ {trans("Delete")} ]"></A>
+					<TD class="bold nobr">{$item.idate|date_format:"%Y/%m/%d %H:%M"}</TD>
+					<TD><a href="?m=balancelist&sourcefileid={$item.id}">{$item.name}</a></TD>
+					<TD class="text-center nobr">{$item.username}</TD>
+					<TD class="text-center">{$item.count|default:0}</TD>
+					<TD class="text-right">
+						<A onclick="return confirmLink(this, '{trans("Are you sure, you want to delete this package and related operations?")}')" href="?m=cashpackagedel&id={$item.id}"><IMG src="img/delete.gif" alt="[ {trans("Delete")} ]" title="[ {trans("Delete")} ]"></A>
 					</TD>
 				</TR>
 				{foreachelse}
 				<TR>
-					<TD class="empty-table" colspan="4">
+					<TD class="empty-table" colspan="5">
 						<p>{trans("There are no packages in database.")}</p>
 					</TD>
 				</TR>
 				{/foreach}
+				</TBODY>
 			</TABLE>
 		</TD>
 	</TR>
