@@ -6,6 +6,7 @@
         <meta name="GENERATOR" content="LMS {$layout.lmsv}">
         <meta http-equiv="Content-Language" content="{$LANGDEFS.$_ui_language.html}">
         <meta http-equiv="Content-Type" content="text/html; charset={$LANGDEFS.$_ui_language.charset}">
+		{include file="jquery.html" language=$LANGDEFS.$_ui_language.html}
         <link href="{ConfigHelper::getConfig('phpui.style', 'img/style.css')}" rel="stylesheet" type="text/css">
         <link href="img/map.css" rel="stylesheet" type="text/css">
         {block name="extra-css-styles"}{/block}
@@ -13,7 +14,6 @@
         <script type="text/javascript" src="img/common.js"></script>
         <script type="text/javascript" src="img/ClickShowHideMenu.js"></script>
         <script type="text/javascript" src="img/autosuggest.js"></script>
-		{include file="jquery.html" language=$LANGDEFS.$_ui_language.html}
     </head>
     <body onload="start_login_timeout({ConfigHelper::getConfig('phpui.timeout')})">
         <div id="overDiv" style="position:absolute; visibility:hidden; z-index:100;"></div>
